# InputSimulator

./: .gitignore  CMakeLists.txt  MouseClickSimulator.cpp  README.md  build.bat  main.cpp
scripts/: eraser.vbs  eraser_daoke.vbs  pen.vbs
test/: abc.txt  dpi_tester.cpp  focus_switcher.cpp
